--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
