--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 
 app.outreach.from=no-reply@leadfarmfinder.local
 app.outreach.unsubscribe-base-url=http://localhost:8080/api/leads/unsubscribe?token=
+
+serpapi.api-key=${SERPAPI_API_KEY}
+serpapi.base-url=https://serpapi.com/search
+serpapi.default-country=de
+serpapi.default-language=de
+serpapi.default-engine=google
