--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ serpapi.base-url=https://serpapi.com/search
 serpapi.default-country=de
 serpapi.default-language=de
 serpapi.default-engine=google
+
+openai.api-key=${OPENAI_API_KEY}
+openai.base-url=https://api.openai.com/v1
+openai.model=gpt-4.1-mini
