--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ serpapi.default-engine=google
 openai.api-key=${OPENAI_API_KEY}
 openai.base-url=https://api.openai.com/v1
 openai.model=gpt-4.1-mini
+
+# discovery
+leadfinder.discovery.results-per-page=10
+leadfinder.discovery.max-pages-per-run=3
+leadfinder.discovery.default-max-serp-page=50
+leadfinder.discovery.limit-per-run=100
+
+# scraper
+leadfinder.scraper.min-hours-between-scrapes=12
+
