--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,11 @@ leadfinder.discovery.limit-per-run=100
 # scraper
 leadfinder.scraper.min-hours-between-scrapes=12
 
+leadfinder.discovery.queries[0]=Erdbeerhof Hofladen Niedersachsen
+leadfinder.discovery.queries[1]=Gemüsehof Hofladen Deutschland
+leadfinder.discovery.queries[2]=Obsthof Hofladen Bayern
+leadfinder.discovery.queries[3]=Spargelhof Hofladen NRW
+leadfinder.discovery.queries[4]=Gemüsehof Direktvermarktung Niedersachsen
+
+
+
