--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,4 +1,8 @@
 databaseChangeLog:
+
+  # -------------------------------------------------------
+  # 1) PIERWSZA TABELA: farm_leads
+  # -------------------------------------------------------
   - changeSet:
       id: 1-create-farm-leads-table
       author: you
@@ -13,20 +17,22 @@ databaseChangeLog:
                     primaryKey: true
                     primaryKeyName: pk_farm_leads
                     nullable: false
+
               - column:
                   name: email
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
+
               - column:
                   name: source_url
                   type: VARCHAR(255)
-                  constraints:
-                    nullable: true
+
               - column:
                   name: created_at
                   type: TIMESTAMP
                   defaultValueComputed: CURRENT_TIMESTAMP
+
               - column:
                   name: active
                   type: BOOLEAN
@@ -44,24 +50,36 @@ databaseChangeLog:
             columnName: id
             columnDataType: BIGINT
 
+  # -------------------------------------------------------
+  # 2) DODANIE unsubscribe_token + nowo wymaganych pól
+  # -------------------------------------------------------
   - changeSet:
-      id: 2-add-unsubscribe-token-to-farm-leads
+      id: 2-add-outreach-columns-to-farm-leads
       author: you
       changes:
         - addColumn:
             tableName: farm_leads
             columns:
               - column:
+                  name: first_email_sent_at
+                  type: TIMESTAMP
+
+              - column:
+                  name: last_email_sent_at
+                  type: TIMESTAMP
+
+              - column:
                   name: unsubscribe_token
                   type: VARCHAR(255)
-                  constraints:
-                    nullable: true
+
         - addUniqueConstraint:
             tableName: farm_leads
             columnNames: unsubscribe_token
             constraintName: uk_farm_leads_unsubscribe_token
 
-
+  # -------------------------------------------------------
+  # 3) serp_query_cursor
+  # -------------------------------------------------------
   - changeSet:
       id: 003-create-serp-query-cursor
       author: mike
@@ -75,29 +93,33 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
+
               - column:
                   name: query
                   type: VARCHAR(500)
                   constraints:
                     nullable: false
                     unique: true
+
               - column:
                   name: current_page
                   type: INT
                   constraints:
                     nullable: false
+
               - column:
                   name: max_page
                   type: INT
                   constraints:
                     nullable: false
+
               - column:
                   name: last_run_at
                   type: TIMESTAMP
-                  constraints:
-                    nullable: true
 
-
+  # -------------------------------------------------------
+  # 4) discovery_run_stats
+  # -------------------------------------------------------
   - changeSet:
       id: 004-create-discovery-run-stats
       author: mike
@@ -127,8 +149,6 @@ databaseChangeLog:
               - column:
                   name: finished_at
                   type: TIMESTAMP
-                  constraints:
-                    nullable: true
 
               - column:
                   name: start_page
@@ -178,6 +198,9 @@ databaseChangeLog:
                   constraints:
                     nullable: false
 
+  # -------------------------------------------------------
+  # 5) discovered_urls
+  # -------------------------------------------------------
   - changeSet:
       id: 2025-11-17-01-create-discovered-urls
       author: mike
@@ -236,6 +259,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: first_seen_at
+
+  # -------------------------------------------------------
+  # 6) Add filtered_already_discovered
+  # -------------------------------------------------------
   - changeSet:
       id: add-filtered-already-discovered-to-discovery-run-stats
       author: mike
@@ -245,10 +272,14 @@ databaseChangeLog:
             columns:
               - column:
                   name: filtered_already_discovered
-                  type: int
+                  type: INT
                   defaultValueNumeric: 0
                   constraints:
                     nullable: false
+
+  # -------------------------------------------------------
+  # 7) farm_sources
+  # -------------------------------------------------------
   - changeSet:
       id: 003-create-farm-sources
       author: mike
@@ -262,26 +293,14 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
+
               - column:
                   name: domain
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
                     unique: true
+
               - column:
                   name: last_scraped_at
                   type: TIMESTAMP
-                  constraints:
-                    nullable: true
-
-#
-#  - changeSet:
-#      id: 3-fill-unsubscribe-token
-#      author: you
-#      changes:
-#        - sql:
-#            sql: >
-#              UPDATE farm_leads
-#              SET unsubscribe_token = gen_random_uuid()::text
-#              WHERE unsubscribe_token IS NULL;
-
