--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,14 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 
-app.outreach.from=no-reply@leadfarmfinder.local
-app.outreach.unsubscribe-base-url=http://localhost:8080/api/leads/unsubscribe?token=
+#mail
+leadfinder.outreach.enabled=true
+leadfinder.outreach.from-address="jobs@mojafirma.de"
+leadfinder.outreach.default-subject="Saisonarbeiter für Ihre Ernte?"
+leadfinder.outreach.max-emails-per-run=20
+#na przysz?o?? mo?e
+#app.outreach.from=no-reply@leadfarmfinder.local
+#app.outreach.unsubscribe-base-url=http://localhost:8080/api/leads/unsubscribe?token=
 
 serpapi.api-key=${SERPAPI_API_KEY}
 serpapi.base-url=https://serpapi.com/search
