--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 
+#jobs
+leadcron.enabled=false
+
 #mail
 leadfinder.outreach.enabled=true
 leadfinder.outreach.from-address="jobs@mojafirma.de"
