--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ leadcron.enabled=false
 
 #mail
 leadfinder.outreach.enabled=true
-leadfinder.outreach.from-address="jobs@mojafirma.de"
-leadfinder.outreach.default-subject="Saisonarbeiter für Ihre Ernte?"
+leadfinder.outreach.from-address=jobs@mojafirma.de
+leadfinder.outreach.default-subject=Saisonarbeiter für Ihre Ernte?
 leadfinder.outreach.max-emails-per-run=20
 #na przysz?o?? mo?e
 #app.outreach.from=no-reply@leadfarmfinder.local
