--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,59 +1,60 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/farms
-    username: postgres
-    password: postgres
+    # PROD: URL, user i hasło z ENV (np. Render Postgres)
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: none
-    show-sql: true
+      ddl-auto: none          # schema zarządzane przez Liquibase
+    show-sql: false           # na prod wyłączamy logowanie SQL
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
   mail:
-    host: hosting2078033.online.pro   # SMTP z panelu
-    port: 587                         # zwykle TLS na 587
-    username: office@o1jobs.de        # pełny login skrzynki
-    password: ${MAIL_PASSWORD} # <-- TU WSTAW PRAWDZIWE HASŁO
+    host: hosting2078033.online.pro
+    port: 587
+    username: office@o1jobs.de
+    password: ${MAIL_PASSWORD}    # z ENV: MAIL_PASSWORD
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
-      mail.debug: true                # na razie włącz, zobaczysz handshake SMTP w logach
+      mail.debug: false           # na prod: false, żeby nie logować całego SMTP
 
-# Cron switches – w prod chcesz mieć oba na true
+# Scraping CRON – na pierwsze deploye lepiej wyłączony, włączysz jak będziesz gotów
 leadcron:
-  enabled: false
-  max-urls-per-run: 100   # ile URL-i na jedno odpalenie
-  interval-millis: 600000 # co ile ms (tu: 10 min)
+  enabled: false                  # na prod docelowo: true
+  max-urls-per-run: 100
+  interval-millis: 600000         # 10 min
 
 leadfinder:
   outreach:
-    enabled: false
+    enabled: false                # PROD SAFE DEFAULT: false (włączysz, gdy chcesz realnie wysyłać)
     from-address: office@o1jobs.de
     default-subject: "Zuverlässige polnische Arbeitskräfte – kurzfristig verfügbar"
     max-emails-per-run: 20
-    simulate-only: false
-    interval-millis: 900000        # jak było
-    delay-between-emails-millis: 1000  # 1 sekunda
+    simulate-only: true           # PROD SAFE DEFAULT: true – najpierw testy/logi
+    interval-millis: 900000       # 15 min między batchami
+    delay-between-emails-millis: 1000  # 1 sekunda między mailami
 
     first-email-body-template: |
       Guten Tag
-  
+      
       Wir vermitteln zuverlässige Arbeitskräfte aus Polen für die Landwirtschaft und ähnliche Bereiche.
       Wir sind eine kleine Agentur aus Polen und arbeiten schnell, unkompliziert und ohne viel Bürokratie.
-  
+      
       Viele Kandidaten sind kurzfristig einsatzbereit, die meisten mit Erfahrung – einige auch mit Deutsch- oder Englischkenntnissen.
 
       Unsere Vermittlungskonditionen (einmalige Provision):
         • 280 Euro- Erntehelfer / landwirtschaftliche Helfer
-        • 320 Euro-Tierpfleger / zB.Melker
+        • 320 Euro- Tierpfleger / z.B. Melker
         • 400 Euro- Hilfsarbeiter (Bau, Reinigung, Produktion, Gartenarbeit, Sortierung)
 
       Ablauf der Vermittlung:
-        • Sie erhalten von uns einen kurzen Vermittlungsvertrag und eine Stellenbeschreibung (Folmular)
+        • Sie erhalten von uns einen kurzen Vermittlungsvertrag und eine Stellenbeschreibung (Formular).
         • Danach senden wir Ihnen passende Kandidatenprofile innerhalb weniger Tage zu.
         • Nach der Bestätigung eines Kandidaten organisieren wir die Anreise zum gewünschten Termin.
         • Die Unterkunft muss vorhanden sein.
@@ -171,7 +172,6 @@ app:
   outreach:
     unsubscribe-base-url: "https://o1jobs.de/unsubscribe/"
 
-
 openai:
   api-key: ${OPENAI_API_KEY}
   base-url: https://api.openai.com/v1
@@ -183,4 +183,3 @@ serpapi:
   default-country: de
   default-language: de
   default-engine: google
-
