--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -28,7 +28,7 @@ spring:
 leadcron:
   enabled: false                  # na prod docelowo: true
   max-urls-per-run: 100
-  interval-millis: 600000         # 10 min
+  interval-millis: 1200000         # 20 min
 
 leadfinder:
   outreach:
