--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -33,7 +33,7 @@ leadcron:
 leadfinder:
   outreach:
     enabled: true                # PROD SAFE DEFAULT: false (włączysz, gdy chcesz realnie wysyłać)
-    from-address: office@o1jobs.de
+    from-address: "Patrycja Swigost <office@o1jobs.de>"
     default-subject: "Zuverlässige polnische Arbeitskräfte – kurzfristig verfügbar"
     max-emails-per-run: 20
     simulate-only: false           # PROD SAFE DEFAULT: true – najpierw testy/logi
