--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -204,7 +204,7 @@ app:
 openai:
   api-key: ${OPENAI_API_KEY}
   base-url: https://api.openai.com/v1
-  model: gpt-4.1-mini
+  model: gpt-5.1
 
 serpapi:
   api-key: ${SERPAPI_API_KEY}
